# relay

./: .gitignore  CONTRIBUTING.md  FEATURE_EXPLANATION.md  LICENSE  README.md  RELEASE.md  ROADMAP.md  index.html  package-lock.json  package.json  run-tauri.bat  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: 01-TECHNICAL-ARCHITECTURE.md  02-MARKET-ANALYSIS.md  03-API-SPECIFICATION.md  04-IMPLEMENTATION-ROADMAP.md  05-PROJECT-STRUCTURE.md  06-GETTING-STARTED.md  DEVELOPMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  SETUP.md  SMOKE_CHECKLIST.md
src/: App.tsx  gateway.ts  index.css
src-tauri/: Cargo.toml  cargo_error.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: db.rs  main.rs  proxy.rs  state.rs
src-tauri/src/commands/: config.rs  conflicts.rs  diagnostics.rs  marketplace.rs  mcp.rs  mod.rs  profiles.rs  servers.rs  settings.rs  updates.rs
src-tauri/src/models/: mod.rs  profile.rs  server.rs  settings.rs
src-tauri/src/utils/: mod.rs  paths.rs  process.rs  secrets.rs
src/components/features/: CatalogPage.tsx  CatalogTabs.tsx  InspectorPage.tsx  LoadingScreen.tsx  MarketplacePage.tsx
src/components/features/clients/: ClientList.tsx  ConnectCustomDialog.tsx
src/components/layout/: LoadingScreen.tsx  Sidebar.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  dialog.tsx  label.tsx  select.tsx  separator.tsx  slider.tsx  textarea.tsx  toast.tsx  toaster.tsx  use-toast.ts
src/lib/: clientCatalog.ts  constants.ts  serverCatalog.ts  tauri.ts  tourConfig.ts  utils.ts
src/services/: marketplace.ts
src/stores/: profileStore.ts  serverStore.ts  settingsStore.ts  uiStore.ts
src/types/: diagnostics.ts  profile.ts  server.ts  settings.ts
(+18 files in other folders)
